Multi-threaded interpreter
It works, but the queue synchronization is far too costly