@@ -6,7 +6,7 @@ import org.openjdk.jmh.infra._
 import java.util.concurrent.TimeUnit
 
 @BenchmarkMode(Array(Mode.AverageTime))
-@Fork(1)
+@Fork(value = 1, jvmArgsAppend = Array("-Xmx16g", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseZGC"))
 @Threads(1)
 @Warmup(iterations = 10)
 @Measurement(iterations = 10)
@@ -32,10 +32,10 @@ class InterpreterBenchmark {
         |  cut S(x) = Add(S(y), r) . x
         |cons Mult(y, r) . x          deriving Erase, Dup
         |  cut Z = r . Z, y . Erase
-        |  cut S(x) = x . Mult(a, Add(b, r)), y . Dup (a, b)
+        |  cut S(x) = x . Mult(a, s1), y . Dup (a, b), b . Add(s1, r)
         |let res =
-        |  y . 100'c,
-        |  x . 100'c,
+        |  y . 1000'c,
+        |  x . 1000'c,
         |  Mult(y, res) . x
         |""".stripMargin))
   }
